Bug 832641 - Invalidate popups when they become visible rather than handling invalidations while they are hidden. r=roc