layout/xul/base/src/nsMenuPopupFrame.cpp
@@ -714,6 +714,8 @@ nsMenuPopupFrame::ShowPopup(bool aIsContextMenu, bool aSelectFirstItem)
 {
   mIsContextMenu = aIsContextMenu;
 
+  InvalidateFrameSubtree();
+
   if (mPopupState == ePopupShowing) {
     mPopupState = ePopupOpen;
     mIsOpenChanged = true;
